syntax="proto3";

option java_package = "com.dataform.protos";
option java_outer_classname = "ProfilesMeta";
option java_multiple_files = true;

message Profile {
  //int64 id = 1;
  //string project_id = 2;

  int32 threads = 7;
  //string schema = 8;

  oneof connection {
    JDBC redshift = 3;
    JDBC postgres = 8;
    BigQuery bigquery = 4;
    Snowflake snowflake = 5;
  }
}

message JDBC {
  required string host = 2;
  required int64 port = 3;
  required string user = 4;
  required string password = 5;
  required string database = 6;
}

message Snowflake {
  required string account_id = 2;
  required string user_name = 3;
  required string password = 4;
  required string role = 5;
  required string database_name = 6;
  required string warehouse = 7;
}

message BigQuery {
  required string project_id = 1;
  required string credentials = 3;
  string location = 4; // EU or US (default)
}
